--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
-DATABASE_URL=postgresql://user:pass@postgres:5432/auth_db
+# DATABASE_URL=postgresql://postgres:admin@postgres:5432/auth_db
+DATABASE_URL=postgresql://postgres:admin@172.16.0.65:5432/auth_db
 NODE_ENV=development
-PORT=4000
-JWT_ACCESS_TOKEN_SECRET=your_access_secret_or_rsa_private_key
-JWT_REFRESH_TOKEN_SECRET=your_refresh_secret_or_rsa_private_key
-ACCESS_TOKEN_EXPIRY=15m
-REFRESH_TOKEN_EXPIRY=30d
-BCRYPT_SALT_ROUNDS=12
+PORT=4040
+JWT_ACCESS_SECRET=your_access_secret_or_rsa_private_key
+JWT_REFRESH_SECRET=your_refresh_secret_or_rsa_private_key
+JWT_ACCESS_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=30d
+# BCRYPT_SALT_ROUNDS=12
 REDIS_URL=redis://redis:6379
 RATE_LIMIT_WINDOW_MS=60000
 RATE_LIMIT_MAX=100
