add base helpers

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://auth_user:strong_pass@postgres:5432/auth_db
+DATABASE_URL=postgresql://auth_user:auth_user_pass@postgres:5432/auth_db
 REDIS_URL=redis://redis:6379
 NODE_ENV=production
 PORT=4001
