--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.18.3",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zod-to-openapi": "^0.2.1"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
