--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "lint": "eslint . --ext .ts",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
-    "pg": "prisma generate",
-    "pm:dev": "prisma migrate dev --name init",
     "pm:deploy": "prisma migrate deploy",
     "swagger": "npx openapi-typescript openapi.yaml -o src/types/openapi.ts",
-    "ci": "pnpm lint && pnpm test && pnpm build"
+    "ci": "pnpm lint && pnpm test && pnpm build",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev --name init",
+    "db:deploy": "prisma migrate deploy",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:reset": "prisma migrate reset && npm run db:seed",
+    "db:studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@prisma/client": "^6.17.0",
+    "@prisma/client": "^5.10.2",
     "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
@@ -53,9 +57,10 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.10",
-    "prisma": "^6.17.0",
+    "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
