--- a/package.json
+++ b/package.json
@@ -4,21 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "tsx watch src/main.ts",
+    "dev:debug": "tsx --inspect src/main.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/server.js",
-    "lint": "eslint . --ext .ts",
+    "start": "node dist/main.js",
+    "start:prod": "NODE_ENV=production node dist/main.js",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
-    "pm:deploy": "prisma migrate deploy",
-    "swagger": "npx openapi-typescript openapi.yaml -o src/types/openapi.ts",
-    "ci": "pnpm lint && pnpm test && pnpm build",
+    "test:ci": "jest --runInBand",
     "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev --name init",
+    "db:migrate": "prisma migrate dev",
     "db:deploy": "prisma migrate deploy",
+    "db:reset": "prisma migrate reset",
     "db:seed": "tsx prisma/seed.ts",
-    "db:reset": "prisma migrate reset && npm run db:seed",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "swagger:generate": "openapi-typescript openapi.yaml -o src/types/openapi.ts",
+    "ci": "pnpm lint && pnpm test:ci && pnpm build"
   },
   "keywords": [],
   "author": "",
